--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -733,9 +733,8 @@ MCMC_naive <- readRDS("rds/MCMC_naive.rds")
 MCMC_active <- readRDS("rds/MCMC_active.rds")
 ```
 
-The output from `BASiCS_MCMC` is a `BASiCS_Chain` object which contains a list 
-of matrices whose rows store the MCMC draws for each set of parameters 
-(e.g. $\mu_i$'s).
+The output from `BASiCS_MCMC` is a `BASiCS_Chain` object which contains the MCMC 
+draws associated to each model parameter.
 These can be accessed using the `displayChainBASiCS` function.
 For example, the following code displays the first 2 MCMC draws for mean
 expression parameters $\mu_i$ associated to the first 3 genes.
@@ -745,6 +744,8 @@ displayChainBASiCS(MCMC_naive, Param = "mu")[1:2, 1:3]
 ```
 
 ## BASiCS analysis - convergence diagnostics
+
+<!--- THIS SECTION IS WIP ---> 
 
 Before we perform downstream analyses, it is critical to assess the convergence 
 of the MCMC algorithm. 
@@ -760,12 +761,53 @@ used to display the marginal distribution for each parameter.
 Users should expect these to follow a unimodal distribution. 
 Failure to satisfy these graphical diagnostics suggest that `N` and `Burn` must 
 be increased. 
+As `r Biocpkg("BASiCS")` infers thousands of parameters, it is impractical
+to assess these diagnostics individually for each parametr. 
 
-The autocorrelation
+```{r}
+library(coda)
+library(ggplot2)
+
+# NOTE: transfer plots to ggplot2 format
+gew.mu_naive <- geweke.diag(mcmc(displayChainBASiCS(MCMC_naive, Param = "mu")))$z
+hist(gew.mu_naive)
+hist(2*pnorm(-abs(gew.mu_naive)))
+
+smoothScatter(log10(colMedians(displayChainBASiCS(MCMC_naive, Param = "mu"))),
+     gew.mu_naive)
+abline(h = c(-3,3), col = "red")
+
+smoothScatter(ess_naive, gew.mu_naive)
+abline(h = c(-3,3), col = "red")
+
+smoothScatter(rowData(sce_naive)$detected[rownames(rowData(sce_naive)) %in% rownames(MCMC_naive)], gew.mu_naive)
+abline(h = c(-3,3), col = "red")
+
+which(abs(gew.mu_naive) == max(abs(gew.mu_naive)) )
+
+ess_naive <- BASiCS_EffectiveSize(MCMC_naive, Param = "mu")
+
+plot(MCMC_naive, Param = "mu", Gene = 6142)
+
+```
+
+The autocorrelation function can be used to assess the efficiency of the MCMC
+algorithm (e.g. Figure \@ref(fig:convergence-naive), right panel).
+Strong autocorrelation between subsequent MCMC draws does not invalidate 
+
+
+MCMC samples are dependent. This does not effect the validity of inference on the posterior if the samplers has time to explore the posterior distribution, but it does affect the efficiency of the sampler.
+
+In other words, highly correlated MCMC samplers requires more samples to produce the same level of Monte Carlo error for an estimate.
+
 
 The autocorrelation of an MCMC chain is defined as the Pearson 
 correlation between the chain and time-delayed versions of the chain. 
 The difference in time-points is referred to as 'lag'. 
+
+As BASiCS has thousands of parameters, it is impractical to explore convergence
+diagnostics for each of them individually.
+Therefore, we provide graphical summaries based on the ESS. 
 
 
 This helps to assess whether a chain has sampled efficiently from its stationary 
@@ -802,11 +844,6 @@ for further downstream analyses. In particular, `BASiCS_DetectHVG` and
 variable genes within a cell population. Moreover, `BASiCS_TestDE` is used to
 perform differential mean and variability analyses between groups of cells.--->
 
-
-
-```{r}
-library("ggplot2")
-```
 
 
 
