--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -897,9 +897,8 @@ For convenience, the MCMC chain can be obtained online at
 \end{Highlighting}
 \end{Shaded}
 
-The output from \texttt{BASiCS\_MCMC} is a \texttt{BASiCS\_Chain} object which contains a list
-of matrices whose rows store the MCMC draws for each set of parameters
-(e.g. \(\mu_i\)'s).
+The output from \texttt{BASiCS\_MCMC} is a \texttt{BASiCS\_Chain} object which contains the MCMC
+draws associated to each model parameter.
 These can be accessed using the \texttt{displayChainBASiCS} function.
 For example, the following code displays the first 2 MCMC draws for mean
 expression parameters \(\mu_i\) associated to the first 3 genes.
@@ -934,19 +933,14 @@ Users should expect these to follow a unimodal distribution.
 Failure to satisfy these graphical diagnostics suggest that \texttt{N} and \texttt{Burn} must
 be increased.
 
-Here, we highlight two ways of assessing the convergence of the MCMC sampler by
-(i) plotting trace plots, sample densities and autocorrelation, and
-(ii) plotting the the effective sample size across multiple parameters.
-Trace plots show the sampled parameter values over time.
-A chain is likely to have converged if, after burn-in, its trace plot
-shows a stable mean, with samples drawn around that mean, and without
-long periods without movement. Sample density plots
-show the marginal distribution of that parameter. A chain is likely to
-have converged when the sample density (in form of a histogram) shows a unimodal
-distribution. The autocorrelation of an MCMC chain is defined as the Pearson
+The autocorrelation
+
+The autocorrelation of an MCMC chain is defined as the Pearson
 correlation between the chain and time-delayed versions of the chain.
-The difference in time-points is referred to as `lag'. This helps to assess
-whether a chain has sampled efficiently from its stationary distribution.
+The difference in time-points is referred to as `lag'.
+
+This helps to assess whether a chain has sampled efficiently from its stationary
+distribution.
 High autocorrelation indicates that the obtained samples are not independent,
 and indicates that we may not have enough information about the posterior
 distribution of the parameters. The chain is likely to be sampling efficiently
