convergence text & ggplot, norm plot

--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1340,3 +1340,28 @@ year = {2015}
   language = {en},
   number = {2}
 }
+
+@article{Geweke1995,
+author = {Geweke, John and In, Forthcoming},
+year = {1995},
+month = {11},
+pages = {},
+title = {Evaluating the Accuracy of Sampling-Based Approaches to the Calculation of Posterior Moments},
+volume = {4}
+}
+
+
+@article{Koehler2009,
+  title = {On the {{Assessment}} of {{Monte Carlo Error}} in {{Simulation}}-{{Based Statistical Analyses}}},
+  author = {Koehler, Elizabeth and Brown, Elizabeth and Haneuse, Sebastien J.-P. A.},
+  year = {2009},
+  month = may,
+  volume = {63},
+  pages = {155--162},
+  issn = {0003-1305, 1537-2731},
+  doi = {10.1198/tast.2009.0030},
+  file = {/home/alan/Zotero/storage/HEVTU93D/Koehler et al. - 2009 - On the Assessment of Monte Carlo Error in Simulati.pdf},
+  journal = {The American Statistician},
+  language = {en},
+  number = {2}
+}
