--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1365,3 +1365,21 @@ volume = {4}
   language = {en},
   number = {2}
 }
+@article{Heidelberger1981,
+author = {Heidelberger, Philip and Welch, Peter D.},
+title = {A Spectral Method for Confidence Interval Generation and Run Length Control in Simulations},
+year = {1981},
+issue_date = {April 1981},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {24},
+number = {4},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/358598.358630},
+doi = {10.1145/358598.358630},
+journal = {Commun. ACM},
+month = apr,
+pages = {233–245},
+numpages = {13},
+keywords = {variance estimation, spectral analysis, simulation, confidence interval, batch means}
+}
